syntax = "proto3";
package index;
option go_package = "/index";

message InscriptionEntry {
  uint32 charms = 1;
  uint64 fee = 2;
  int64 height = 3;
  bytes id = 4;
  int32 inscription_number = 5;
  optional bytes sat = 6;
  uint32 sequence_number = 7;
  int64 timestamp = 8;
}